--- a/.gitignore
+++ b/.gitignore
@@ -29,8 +29,7 @@ bower_components
 # node-waf configuration
 .lock-wscript
 
-# Compiled binary addons (http://nodejs.org/api/addons.html)
-build/Release
+dist
 
 # Dependency directories
 node_modules/
@@ -57,3 +56,4 @@ typings/
 # dotenv environment variables file
 .env
 
+.DS_Store
