--- a/package.json
+++ b/package.json
@@ -6,5 +6,20 @@
   "repository": "git@github.com:nikorablin/react-simple-scrollbar.git",
   "author": "Nik Korablin <nikorablin@gmail.com>",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "devDependencies": {
+    "babel-cli": "6.26.0",
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.4",
+    "babel-plugin-transform-object-rest-spread": "6.26.0",
+    "babel-plugin-transform-react-jsx": "6.24.1",
+    "babel-preset-env": "1.6.1",
+    "eslint": "4.18.2",
+    "eslint-config-airbnb": "16.1.0",
+    "eslint-plugin-import": "2.9.0",
+    "eslint-plugin-jsx-a11y": "6.0.3",
+    "eslint-plugin-react": "7.7.0",
+    "webpack": "4.1.1",
+    "webpack-cli": "2.0.10"
+  }
 }
