--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": ["env"],
+  "presets": ["env", "flow"],
   "plugins": [
     "transform-object-rest-spread",
     "transform-react-jsx"
