--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,9 @@
 {
-  "presets": ["env", "flow"],
+  "presets": ["env", "react", "stage-2", "flow"],
   "plugins": [
     "transform-object-rest-spread",
-    "transform-react-jsx"
+    "transform-react-jsx",
+    "transform-class-properties",
+    "react-hot-loader/babel",
   ]
 }
