--- a/package.json
+++ b/package.json
@@ -8,17 +8,28 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "build": "webpack --mode=production"
+    "build": "webpack --mode=production",
+    "start": "yarn run build && webpack-dev-server --hot --inline --config=webpack.demo.config.js --mode=development"
+  },
+  "babel": {
+    "presets": [
+      "env",
+      "react",
+      "stage-2"
+    ]
   },
   "devDependencies": {
     "babel-cli": "6.26.0",
     "babel-core": "6.26.0",
     "babel-eslint": "8.2.2",
     "babel-loader": "7.1.4",
+    "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-plugin-transform-react-jsx": "6.24.1",
     "babel-preset-env": "1.6.1",
     "babel-preset-flow": "^6.23.0",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-2": "6.24.1",
     "css-loader": "0.28.10",
     "eslint": "4.18.2",
     "eslint-config-airbnb": "16.1.0",
@@ -28,12 +39,16 @@
     "eslint-plugin-jsx-a11y": "6.0.3",
     "eslint-plugin-prettier": "2.6.0",
     "eslint-plugin-react": "7.7.0",
-    "flow-bin": "^0.66.0",
+    "flow-bin": "0.66.0",
+    "react-hot-loader": "4.0.0",
+    "style-loader": "0.20.2",
     "webpack": "4.1.1",
-    "webpack-cli": "2.0.10"
+    "webpack-cli": "2.0.10",
+    "webpack-dev-server": "3.1.0"
   },
   "dependencies": {
-    "react": "16.2.0"
+    "react": "16.2.0",
+    "react-dom": "16.2.0"
   },
   "peerDependencies": {
     "react": "16.2.0"
