--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "eslint-plugin-prettier": "2.6.0",
     "eslint-plugin-react": "7.7.0",
     "flow-bin": "0.66.0",
+    "postcss-loader": "2.1.1",
+    "postcss-nested": "3.0.0",
+    "postcss-simple-vars": "4.1.0",
     "react-hot-loader": "4.0.0",
     "style-loader": "0.20.2",
     "webpack": "4.1.1",
@@ -47,6 +50,8 @@
     "webpack-dev-server": "3.1.0"
   },
   "dependencies": {
+    "bowser": "1.9.2",
+    "classnames": "2.2.5",
     "react": "16.2.0",
     "react-dom": "16.2.0"
   },
